assets/blocks: add hover and focus style to 2nd bg block btn to ensure contrast remains high fixes #1057

--- a/liqd_product/assets/scss/components/_blocks.scss
+++ b/liqd_product/assets/scss/components/_blocks.scss
@@ -210,6 +210,16 @@ $block-padding-md: 7.5*$padding;
 .btn--transparent.block-bg_btn-2 {
     color: $text-color-inverted;
     border-color: $text-color-inverted;
+
+    &,
+    &:focus,
+    &:hover,
+    &:active,
+    &:disabled,
+    &.is-disabled {
+        color: $text-color-inverted;
+        border-color: $text-color-inverted;
+    }
 }
 
 .block-background_cta_block {
